build/deployment/cluster/monitoring/simplified/jaegerallinone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jaeger
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  strategy: {}
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - image: jaegertracing/all-in-one
        name: sre-basic-app-jaeger
        resources:
          requests:
            memory: "2Gi"
            cpu: "2000m"
          limits:
            memory: "4Gi"
            cpu: "4000m"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-jaeger.local
    http:
      paths:
      - backend:
          service:
            name: jaeger
            port:
              number: 16686
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-grafana
  name: prometheus
spec:
  ports:
  - port: 9090
    name: prometheus
    protocol: TCP
    targetPort: 9090
  selector:
    app: prometheus-grafana
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jaeger
  name: jaeger
spec:
  ports:
  - port: 5775
    name: agent-deprecated-udp
    protocol: UDP
    targetPort: 5775
  - port: 5775
    name: agent-deprecated
    protocol: TCP
    targetPort: 5775
  - port: 6831
    name: agent-compact-thrift
    protocol: UDP
    targetPort: 6831
  - port: 6832
    name: agent-binary-thrift
    protocol: UDP
    targetPort: 6832
  - port: 16686
    name: front
    protocol: TCP
    targetPort: 16686
  - port: 14268
    name: collector
    protocol: TCP
    targetPort: 14268
  - port: 14250
    name: collector-proto
    protocol: TCP
    targetPort: 14250
  - port: 9411
    name: collector-zipkin
    protocol: TCP
    targetPort: 9411
  selector:
    app: jaeger
  type: ClusterIP
